# python-cicd-template

./: .gitignore  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: code_coverage.yaml  test.yaml  test_nox.yaml  tests.yaml  upload_coverage_report.yaml
docs/: mkdocs.yml
docs/docs/: how-to-guides.md  index.md  reference.md
src/addition_package/: __init__.py  add.py
tests/: test_addition.py
