[tool.poetry]
name = "addition_package"
version = "0.1.0"
description = ""
authors = ["Demir Catovic <d.catovic9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = "^7.0.5"
nox = "^2022.11.21"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.formatting.dependencies]
black = "^22.12.0"

[tool.poetry.group.static_type_checking.dependencies]
mypy = "^0.991"

[tool.poetry.group.linting.dependencies]
flake8 = "^6.0.0"

[tool.poetry.group.testing.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.pytest.ini_options]
minversion = 7.0
addopts = "--cov"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["addition_package"]

[tool.coverage.report]
show_missing = true
fail_under = 100
